# Adviento2025_BDB

./: .gitignore  Cargo.toml  README.md
contracts/dia01_primer_regalo_de_navidad/: Cargo.toml  README.md
contracts/dia02_arbol_digital/: Cargo.toml  README.mkd
contracts/dia03_cartas_a_santa/: Cargo.toml  README.mkd
contracts/dia04_tokens_de_jengibre/: Cargo.toml  README.md
contracts/dia05_trineo_automatizado/: Cargo.toml  README.md
contracts/dia06_lucces_navidenas/: Cargo.toml  README.md
contracts/dia07_estrella_del_norte/: Cargo.toml  README.md
contracts/dia08_elfos_trabajadores/: Cargo.toml  README.mkd
contracts/dia09_calcetines_magicos/: Cargo.toml  README.mkd
contracts/dia10_renos_voladores/: Cargo.toml  README.mkd
contracts/dia11_campanas_sonoras/: Cargo.toml  README.mkd
contracts/dia12_nieve_cristalina/: Cargo.toml  README.md
contracts/dia13_chocolate_caliente/: Cargo.toml  README.md
contracts/dia14_velas_brillantes/: Cargo.toml  README.md
contracts/dia15_corona_de_adviento/: Cargo.toml  README.mkd
contracts/dia16_muneco_de_nieve/: Cargo.toml  README.mkd
contracts/dia17_baston_de_caramelo/: Cargo.toml  README.md  README.mkd
contracts/dia18_taller_de_santa/: Cargo.toml  README.md
contracts/dia19_guirnaldas_festivas/: Cargo.toml  README.md
contracts/dia20_villancicos_digitales/: Cargo.toml  README.mkd
contracts/dia21_chimenea_acogedora/: Cargo.toml  README.md
contracts/dia22_regalo_sorpresa/: Cargo.toml  README.md
contracts/dia23_posada_navidena/: Cargo.toml  README.mkd
front/: README.md
(+79 files in other folders)
